Adding delete client endpoint
